--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./src/assets/shopping-bag.png" type="image/x-icon" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Orderly</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Orderly | Smart Shopping Simplified</title>
+    <meta
+      name="keywords"
+      content="Orderly, Online Shopping, Smart Shopping, E-commerce Store, Perfume Collection, Makeup Essentials, Affordable Products, Product Reviews, Built with React, Modern Frontend Design"
+    />
+    <meta
+      name="description"
+      content="Orderly lets you explore curated products, compare categories, and shop smarter — all in one seamless experience."
+    />
   </head>
   <body>
     <div id="root"></div>
